Agregando funcionalidad al reporte

--- a/LeerExcel/LeerExcel.csproj
+++ b/LeerExcel/LeerExcel.csproj
@@ -216,6 +216,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion.cs" />
+    <Compile Include="DataSet1.cs">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
